# html-host

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  alembic.ini  data.db  pyproject.toml
.github/workflows/: cd.yml  ci.yml
deploy/nginx/: html-host.conf
deploy/systemd/: html-host.service
frontend/: index.html
src/html_host/: __init__.py  main.py
src/html_host/api/v1/: __init__.py  auth.py  files.py  router.py  schemas.py
src/html_host/core/: config.py  security.py
src/html_host/db/: base.py  models.py  session.py
src/html_host/db/migrations/: env.py
src/html_host/db/migrations/versions/: bcd47ff6bc99_initial.py
src/html_host/services/: file_service.py
tests/: conftest.py  test_file_service.py  test_files_api.py
