[project]
name = "html-host"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "levin", email = "3259963@qq.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
html-host = "html_host:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
